<resources>
    <string name="app_name">AppPlatzigram</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña </string>
    <string name="text_cuenta">No tienes cuenta?, </string>
    <string name="login">Login</string>
    <string name="create_here"> Crea una aquí.</string>
    <string name="hint_email">Correo:</string>
    <string name="hint_name">Nombre:</string>
    <string name="hint_user">Usuario:</string>
    <string name="hint_password_confirmar">Confirmar contraseña:</string>
    <string name="btn_join">Unete</string>
    <string name="toolbar_create">Crear Cuenta</string>
    <string name="hint_apellido">Apellidos:</string>
    <string name="autor_cardview">Edwin palacios</string>
    <string name="s_time_cardview">Hace</string>
    <string name="s_time2_cardview">4 días</string>
    <string name="s_like_cardview">12 likes</string>
    <string name="s_bb_search">Buscar</string>
    <string name="s_bb_home">Home</string>
    <string name="s_bb_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
