<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/picture_cardview"
    android:layout_width="match_parent"
    android:layout_height="@dimen/picture_cardview"
    cardview:cardCornerRadius="@dimen/corner_cardview">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/picture_cardview"
            android:background="@drawable/image"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/paddig_cardview"
            android:paddingBottom="@dimen/paddig_cardview"
            android:background="@color/background_card">

            <TextView
                android:id="@+id/autor_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autor_cardview"
                android:textColor="@color/white"
                android:textSize="@dimen/et_size_cardview"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_time_cardview"
                    android:textColor="@color/white"
                    android:textSize="@dimen/et_size_time"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_time2_cardview"
                    android:textColor="@color/white"
                    android:textSize="@dimen/et_size_time"
                    android:paddingLeft="@dimen/padding_espacio_card"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_fivedp">
                <CheckBox
                    android:id="@+id/checkbox_cardview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_like_cardview"
                    android:textColor="@color/white"
                    android:textSize="@dimen/et_size_time"
                    android:paddingLeft="@dimen/padding_espacio_card"
                    />



            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


</android.support.v7.widget.CardView>